Margin style fix on mobile

--- a/src/css/_potStyles.scss
+++ b/src/css/_potStyles.scss
@@ -7,7 +7,7 @@
 
 .intro-note {	
     width: calc(100% - 20px);
-    margin: 0 10px;
+    margin: 0 5px;
 	font-family: "Guardian Text Sans Web", Helvetica, Arial, sans-serif !important;
 	font-size:13px;
 	line-height:16px;
@@ -46,7 +46,7 @@
 }
 
 .gv-pot-div-intro{
-	margin:0 10px;
+	margin:0 5px;
 	width: calc(100% - 20px);
 	@include mq(embedFiveEighty){
 		margin: 0;
