--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -70,7 +70,9 @@ $button: $accent-color;
 
 }
 
-body{
+
+
+html, body{
 	background-color:#FFF !important;
 }
 
